import com.github.davidmc24.gradle.plugin.avro.GenerateAvroJavaTask

plugins {
	id 'java'
	id 'war'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'io.gatling.gradle' version '3.14.3.5'
	id "com.github.davidmc24.gradle.plugin.avro" version '1.9.1'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'performance'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	gradlePluginPortal()
	maven {
		url 'https://packages.confluent.io/maven/'
	}
}

ext {
	set('gatlingVersion', "3.14.3")
	set("kafkaVersion", "3.9.1")
	set("confluentVersion", "7.9.2")
}

dependencies {
	implementation (
			"org.yaml:snakeyaml:2.4",
			"io.vavr:vavr:0.10.7",

			//kafka
			'org.springframework.kafka:spring-kafka:3.3.8',
			"org.apache.kafka:kafka-clients:${kafkaVersion}",
			"org.apache.kafka:kafka-streams:${kafkaVersion}",

			//avro
			"org.apache.avro:avro:1.12.0",
			"io.confluent:kafka-avro-serializer:${confluentVersion}",
			"io.confluent:kafka-streams-avro-serde:${confluentVersion}",

			//lib-gatling
			"io.gatling:gatling-core:${gatlingVersion}",
			"io.gatling:gatling-http:${gatlingVersion}",
			"io.gatling.highcharts:gatling-charts-highcharts:${gatlingVersion}",

			//csv
			"com.opencsv:opencsv:5.12.0"

	)
	compileOnly 'org.projectlombok:lombok:1.18.32'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
}

tasks.named('test') {
	useJUnitPlatform()
}

apply plugin: 'io.gatling.gradle'

def avroCodeGenerationDir = "./build/generated/avro"

// Add the generated Avro Java code to the Gradle source files.
sourceSets.main.java.srcDirs += [avroCodeGenerationDir]

tasks.register("generateAvro", GenerateAvroJavaTask) {
	source("./../src/main/resources/avro")
	outputDir = file("./build/generated/avro")
}

def reportDesscription = "CI Performance Testing"
def simulation = "com.example.performance.AppSimulation"

tasks.register("runLoadTest", JavaExec.class) {
	environment(Map.of("GATLING_HOME", workingDir))
	description 'PERFORMANCE TESTING'

	getMainClass().set("io.gatling.app.Gatling")

	classpath = sourceSets.test.runtimeClasspath
	systemProperties = System.getProperties() as Map<String, ?>;
	jvmArgs List.of('--add-opens', 'java.base/java.lang=ALL-UNNAMED')

	// Specify the simulation class to run
	args = ['-s', "${simulation}",
			'-rd', "${reportDesscription}",
			'-rf', "${workingDir}/build/reports/gatling"
	]
}
